--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.17.0",
     "@emoji-mart/data": "^1.1.2",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.0",
     "@livekit/components-react": "^1.1.3",
     "@livekit/components-styles": "^1.0.6",
